--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
               <div class="u-align-left u-container-style u-layout-cell u-size-25-lg u-size-25-xl u-size-32-md u-size-32-sm u-size-32-xs u-layout-cell-2" data-animation-name="zoomIn" data-animation-duration="1750" data-animation-direction="">
                 <div class="u-container-layout u-container-layout-2">
                  
-                  <img class="u-image u-image-default u-image-3" src="images/button.png" alt="" data-image-width="100" data-image-height="100" data-href="https://www.authpro.com/auth/easyliv/">
+                  <img class="u-image u-image-default u-image-3" src="images/button.png" alt="" data-image-width="100" data-image-height="100" data-href="https://dailysteps.github.io/i/?view=Paullink">
                 </d
               </div>
             </div>
