--- a/Home.html
+++ b/Home.html
@@ -40,7 +40,7 @@
                   <img class="u-image u-image-default u-image-2" src="images/backd.png" alt="" data-image-width="1254" data-image-height="717">
                   <h3 class="u-custom-font u-font-montserrat u-text u-text-custom-color-1 u-text-default u-text-2"</h3>
                   
-                  <img class="u-image u-image-default u-image-3" src="images/button.png" alt="" data-image-width="707" data-image-height="76" data-href="https://dailysteps.github.io/i/?view=Paullink">
+                  <img class="u-image u-image-default u-image-3" src="images/button.png" alt="" data-image-width="707" data-image-height="76" data-href="https://dailysteps.github.io/i/?push=Paullink">
                 </div>
               </div>
             </div>
